--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -53,6 +53,10 @@ jobs:
 
         # Runs Snyk Code (SAST) analysis and uploads result into GitHub.
         # Use || true to not fail the pipeline
+        
+      - name: Snyk Auth
+        run: snyk auth ${{ env.SNYK_TOKEN }}
+        
       - name: Snyk Code test
         run: snyk code test || true
 #         run: snyk code test --sarif > snyk-code.sarif # || true
